[project]
name = "rental-dash"
version = "0.1.0"
description = ""
authors = [
    {name = "edwdev-oficial",email = "edjdevel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "plotly (>=6.1.0,<7.0.0)",
    "make-aggrid (>=0.1.8,<0.2.0)",
    "streamlit-aggrid (==1.1.2)",
    "gspread (>=6.2.1,<7.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)"
]

[tool.poetry]
packages = [{include = "rental_dash", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
